TODO
* remove io_handle from fdata stream callback functions?
* TODO: libfvalue_value_write_to_file_stream
* update smraw.net bindings
* why is empty information value section written in info file

* complete libfvalue and test information file read/write
* configure validate libuna and libbfio check
* close segment file handle on writing when full?
* check if information file is handled correctly on close/free

Features
* allow set of segment filename during write (as alternative writing locations)
* add read and write random functions
* implement write resume
* glob of .1ofN for PREFIX (without the initial extension to help the glob function)

Tooling
* detect maximum possible segment size on file system (e.g. FAT)
* smrawinfo
  - create
  - print info from info file
* smrawverify
  - get hashes from info file

Tests:
* retrieve data from the information file on open
* make sure certain values cannot be changed if writing/reading from raw files
* add tests for Python-bindings
* information file

20141102
* bug fixes for information file

20141030
* bug fix in Python-bindings

20141026
* changes for deployment

20141022
* changes for deployment

20141021
* changes for deployment

20141007
* updated dependencies and corresponding changes
* worked on autogen.sh and synclibs.sh scripts

20140930
* removed README.macosx
* changes for project site move

20140817
* updated msvscpp files - fixes for smraw.net

20140801
* Worked on smrawmount

20140728
* updated dependencies
* fixes for FreeBSD 8 compilation
* updated dpkg files

20140621
* updated msvscpp files

20140614
* removed examples

20140612
* worked on Python bindings

20140611
* worked on Python bindings

20140610
* worked on Python bindings

20140119
* 2014 update
* updated dependencies

20131230
* updated dependencies

20131210
* updated dependencies
* smrawmount worked on Dokan support

20130901
* added smrawverify
* worked on tests
  - replaced compare test by smrawverify test
* updated msvscpp files