@@ -6,10 +6,10 @@ Project information:
 
 Work in progress:
 * Dokan library support
+* Thread-safety in handle API functions
 
 Planned:
 * Info file support
-* Multi-threading support
 * Python 3 support
 
 For more information see:
