@@ -29,6 +29,7 @@
 #include "libsmraw_libcerror.h"
 #include "libsmraw_libcnotify.h"
 #include "libsmraw_libcstring.h"
+#include "libsmraw_libcthreads.h"
 #include "libsmraw_libfvalue.h"
 #include "libsmraw_types.h"
 
@@ -89,8 +90,38 @@ int libsmraw_handle_get_media_size(
 
 		return( -1 );
 	}
+#if defined( HAVE_MULTI_THREAD_SUPPORT )
+	if( libcthreads_read_write_lock_grab_for_read(
+	     internal_handle->read_write_lock,
+	     error ) != 1 )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+		 LIBCERROR_RUNTIME_ERROR_SET_FAILED,
+		 "%s: unable to grab read/write lock for reading.",
+		 function );
+
+		return( -1 );
+	}
+#endif
 	*media_size = internal_handle->io_handle->media_size;
 
+#if defined( HAVE_MULTI_THREAD_SUPPORT )
+	if( libcthreads_read_write_lock_release_for_read(
+	     internal_handle->read_write_lock,
+	     error ) != 1 )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+		 LIBCERROR_RUNTIME_ERROR_SET_FAILED,
+		 "%s: unable to release read/write lock for reading.",
+		 function );
+
+		return( -1 );
+	}
+#endif
 	return( 1 );
 }
 
@@ -141,6 +172,7 @@ int libsmraw_handle_set_media_size(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
 	internal_handle->io_handle->media_size = media_size;
 
 	return( 1 );
@@ -186,8 +218,24 @@ int libsmraw_handle_get_bytes_per_sector(
 
 		return( -1 );
 	}
+#if defined( HAVE_MULTI_THREAD_SUPPORT )
+	if( libcthreads_read_write_lock_grab_for_read(
+	     internal_handle->read_write_lock,
+	     error ) != 1 )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+		 LIBCERROR_RUNTIME_ERROR_SET_FAILED,
+		 "%s: unable to grab read/write lock for reading.",
+		 function );
+
+		return( -1 );
+	}
+#endif
 	*bytes_per_sector = 0;
 
+/* TODO refactor into media_values_get_64bit_value function ? */
 	result = libfvalue_table_get_value_by_identifier(
 	          internal_handle->media_values,
 	          (uint8_t *) identifier,
@@ -206,7 +254,7 @@ int libsmraw_handle_get_bytes_per_sector(
 		 function,
 		 identifier );
 
-		return( -1 );
+		goto on_error;
 	}
 	else if( result != 0 )
 	{
@@ -223,7 +271,7 @@ int libsmraw_handle_get_bytes_per_sector(
 			 "%s: unable to copy value to a 64-bit value.",
 			 function );
 
-			return( -1 );
+			goto on_error;
 		}
 		if( value_64bit > (uint64_t) UINT32_MAX )
 		{
@@ -234,11 +282,34 @@ int libsmraw_handle_get_bytes_per_sector(
 			 "%s: 64-bit bytes per sector value out of bounds.",
 			 function );
 
-			return( -1 );
+			goto on_error;
 		}
 		*bytes_per_sector = (uint32_t) value_64bit;
 	}
+#if defined( HAVE_MULTI_THREAD_SUPPORT )
+	if( libcthreads_read_write_lock_release_for_read(
+	     internal_handle->read_write_lock,
+	     error ) != 1 )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+		 LIBCERROR_RUNTIME_ERROR_SET_FAILED,
+		 "%s: unable to release read/write lock for reading.",
+		 function );
+
+		return( -1 );
+	}
+#endif
 	return( 1 );
+
+on_error:
+#if defined( HAVE_MULTI_THREAD_SUPPORT )
+	libcthreads_read_write_lock_release_for_read(
+	 internal_handle->read_write_lock,
+	 NULL );
+#endif
+	return( -1 );
 }
 
 /* Sets the bytes per sector
@@ -281,6 +352,8 @@ int libsmraw_handle_set_bytes_per_sector(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
+/* TODO refactor into media_values_set_64bit_value function ? */
 	result = libfvalue_table_get_value_by_identifier(
 	          internal_handle->media_values,
 	          (uint8_t *) identifier,
@@ -428,6 +501,7 @@ int libsmraw_handle_get_media_type(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
 	*media_type = LIBSMRAW_MEDIA_TYPE_UNKNOWN;
 
 	result = libfvalue_table_get_value_by_identifier(
@@ -565,6 +639,7 @@ int libsmraw_handle_set_media_type(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
 	switch( media_type )
 	{
 		case LIBSMRAW_MEDIA_TYPE_FIXED:
@@ -750,6 +825,7 @@ int libsmraw_handle_get_media_flags(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
 	result = libfvalue_table_get_value_by_identifier(
 	          internal_handle->media_values,
 	          (uint8_t *) identifier,
@@ -877,6 +953,7 @@ int libsmraw_handle_set_media_flags(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
 	if( ( media_flags & LIBSMRAW_MEDIA_FLAG_PHYSICAL ) != 0 )
 	{
 		value_string        = "physical";
@@ -1017,6 +1094,7 @@ int libsmraw_handle_get_number_of_information_values(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
 	if( libfvalue_table_get_number_of_values(
 	     internal_handle->information_values,
 	     number_of_information_values,
@@ -1073,6 +1151,7 @@ int libsmraw_handle_get_information_value_identifier_size(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
 	if( libfvalue_table_get_value_by_index(
 	     internal_handle->information_values,
 	     information_value_index,
@@ -1161,6 +1240,7 @@ int libsmraw_handle_get_information_value_identifier(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
 	if( libfvalue_table_get_value_by_index(
 	     internal_handle->information_values,
 	     information_value_index,
@@ -1284,6 +1364,7 @@ int libsmraw_handle_get_utf8_information_value_size(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
 	result = libfvalue_table_get_value_by_identifier(
 	          internal_handle->information_values,
 	          identifier,
@@ -1378,6 +1459,7 @@ int libsmraw_handle_get_utf8_information_value(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
 	result = libfvalue_table_get_value_by_identifier(
 	          internal_handle->information_values,
 	          identifier,
@@ -1472,6 +1554,7 @@ int libsmraw_handle_set_utf8_information_value(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
 	result = libfvalue_table_get_value_by_identifier(
 	          internal_handle->information_values,
 	          identifier,
@@ -1619,6 +1702,7 @@ int libsmraw_handle_get_utf16_information_value_size(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
 	result = libfvalue_table_get_value_by_identifier(
 	          internal_handle->information_values,
 	          identifier,
@@ -1713,6 +1797,7 @@ int libsmraw_handle_get_utf16_information_value(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
 	result = libfvalue_table_get_value_by_identifier(
 	          internal_handle->information_values,
 	          identifier,
@@ -1807,6 +1892,7 @@ int libsmraw_handle_set_utf16_information_value(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
 	result = libfvalue_table_get_value_by_identifier(
 	          internal_handle->information_values,
 	          identifier,
@@ -1938,6 +2024,7 @@ int libsmraw_handle_get_number_of_integrity_hash_values(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
 	if( libfvalue_table_get_number_of_values(
 	     internal_handle->integrity_hash_values,
 	     number_of_integrity_hash_values,
@@ -1994,6 +2081,7 @@ int libsmraw_handle_get_integrity_hash_value_identifier_size(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
 	if( libfvalue_table_get_value_by_index(
 	     internal_handle->integrity_hash_values,
 	     integrity_hash_value_index,
@@ -2082,6 +2170,7 @@ int libsmraw_handle_get_integrity_hash_value_identifier(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
 	if( libfvalue_table_get_value_by_index(
 	     internal_handle->integrity_hash_values,
 	     integrity_hash_value_index,
@@ -2205,6 +2294,7 @@ int libsmraw_handle_get_utf8_integrity_hash_value_size(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
 	result = libfvalue_table_get_value_by_identifier(
 	          internal_handle->integrity_hash_values,
 	          identifier,
@@ -2299,6 +2389,7 @@ int libsmraw_handle_get_utf8_integrity_hash_value(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
 	result = libfvalue_table_get_value_by_identifier(
 	          internal_handle->integrity_hash_values,
 	          identifier,
@@ -2393,6 +2484,7 @@ int libsmraw_handle_set_utf8_integrity_hash_value(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
 	result = libfvalue_table_get_value_by_identifier(
 	          internal_handle->integrity_hash_values,
 	          identifier,
@@ -2540,6 +2632,7 @@ int libsmraw_handle_get_utf16_integrity_hash_value_size(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
 	result = libfvalue_table_get_value_by_identifier(
 	          internal_handle->integrity_hash_values,
 	          identifier,
@@ -2634,6 +2727,7 @@ int libsmraw_handle_get_utf16_integrity_hash_value(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
 	result = libfvalue_table_get_value_by_identifier(
 	          internal_handle->integrity_hash_values,
 	          identifier,
@@ -2728,6 +2822,7 @@ int libsmraw_handle_set_utf16_integrity_hash_value(
 
 		return( -1 );
 	}
+/* TODO add thread-safety support */
 	result = libfvalue_table_get_value_by_identifier(
 	          internal_handle->integrity_hash_values,
 	          identifier,
