@@ -53,12 +53,15 @@ EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "smraw_test_glob", "smraw_test_glob\smraw_test_glob.vcproj", "{792F01AC-489C-46F6-8176-52E0F8F20DE0}"
 	ProjectSection(ProjectDependencies) = postProject
 		{8836FD13-C36B-47D3-A9DF-BB994FFA6039} = {8836FD13-C36B-47D3-A9DF-BB994FFA6039}
+		{8AFAA2C6-E025-4B45-B96F-A27D04C6115A} = {8AFAA2C6-E025-4B45-B96F-A27D04C6115A}
+		{BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C} = {BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C}
 		{20FFC4C9-F44C-45F6-A827-4819B4DF3C9F} = {20FFC4C9-F44C-45F6-A827-4819B4DF3C9F}
 	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "smraw_test_open_close", "smraw_test_open_close\smraw_test_open_close.vcproj", "{29D679FF-DE2E-4D36-8812-A23B10AB2A64}"
 	ProjectSection(ProjectDependencies) = postProject
 		{8836FD13-C36B-47D3-A9DF-BB994FFA6039} = {8836FD13-C36B-47D3-A9DF-BB994FFA6039}
+		{8AFAA2C6-E025-4B45-B96F-A27D04C6115A} = {8AFAA2C6-E025-4B45-B96F-A27D04C6115A}
 		{BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C} = {BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C}
 		{20FFC4C9-F44C-45F6-A827-4819B4DF3C9F} = {20FFC4C9-F44C-45F6-A827-4819B4DF3C9F}
 	EndProjectSection
@@ -66,6 +69,7 @@ EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "smraw_test_read", "smraw_test_read\smraw_test_read.vcproj", "{F7A2D803-FC42-4C42-B1E6-E794F94228BF}"
 	ProjectSection(ProjectDependencies) = postProject
 		{8836FD13-C36B-47D3-A9DF-BB994FFA6039} = {8836FD13-C36B-47D3-A9DF-BB994FFA6039}
+		{8AFAA2C6-E025-4B45-B96F-A27D04C6115A} = {8AFAA2C6-E025-4B45-B96F-A27D04C6115A}
 		{BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C} = {BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C}
 		{20FFC4C9-F44C-45F6-A827-4819B4DF3C9F} = {20FFC4C9-F44C-45F6-A827-4819B4DF3C9F}
 	EndProjectSection
@@ -73,6 +77,7 @@ EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "smraw_test_read_loop", "smraw_test_read_loop\smraw_test_read_loop.vcproj", "{57893CA6-474D-4E3D-BF04-6B2785237229}"
 	ProjectSection(ProjectDependencies) = postProject
 		{8836FD13-C36B-47D3-A9DF-BB994FFA6039} = {8836FD13-C36B-47D3-A9DF-BB994FFA6039}
+		{8AFAA2C6-E025-4B45-B96F-A27D04C6115A} = {8AFAA2C6-E025-4B45-B96F-A27D04C6115A}
 		{BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C} = {BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C}
 		{20FFC4C9-F44C-45F6-A827-4819B4DF3C9F} = {20FFC4C9-F44C-45F6-A827-4819B4DF3C9F}
 	EndProjectSection
@@ -80,6 +85,8 @@ EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "smraw_test_seek", "smraw_test_seek\smraw_test_seek.vcproj", "{A7545354-5D50-49F6-A3D0-1F97F6228955}"
 	ProjectSection(ProjectDependencies) = postProject
 		{8836FD13-C36B-47D3-A9DF-BB994FFA6039} = {8836FD13-C36B-47D3-A9DF-BB994FFA6039}
+		{8AFAA2C6-E025-4B45-B96F-A27D04C6115A} = {8AFAA2C6-E025-4B45-B96F-A27D04C6115A}
+		{BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C} = {BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C}
 		{20FFC4C9-F44C-45F6-A827-4819B4DF3C9F} = {20FFC4C9-F44C-45F6-A827-4819B4DF3C9F}
 	EndProjectSection
 EndProject
@@ -88,6 +95,8 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "smraw_test_write", "smraw_t
 		{D6DC307C-0CA0-4144-BB19-9C43B476280F} = {D6DC307C-0CA0-4144-BB19-9C43B476280F}
 		{3FFB9C05-1145-45A7-9ADE-5C8D70FBD7CA} = {3FFB9C05-1145-45A7-9ADE-5C8D70FBD7CA}
 		{8836FD13-C36B-47D3-A9DF-BB994FFA6039} = {8836FD13-C36B-47D3-A9DF-BB994FFA6039}
+		{8AFAA2C6-E025-4B45-B96F-A27D04C6115A} = {8AFAA2C6-E025-4B45-B96F-A27D04C6115A}
+		{BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C} = {BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C}
 		{20FFC4C9-F44C-45F6-A827-4819B4DF3C9F} = {20FFC4C9-F44C-45F6-A827-4819B4DF3C9F}
 	EndProjectSection
 EndProject
